# OpenHPC.openapi.json
@@ -430,6 +430,30 @@
         },
         "security": []
       }
+    },
+    "/infra/px-restart": {
+      "get": {
+        "summary": "重启端口代理",
+        "deprecated": false,
+        "description": "",
+        "tags": [],
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {}
+                }
+              }
+            },
+            "headers": {}
+          }
+        },
+        "security": []
+      }
     }
   },
   "components": {
